fix button alignment in modals

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -40,7 +40,6 @@ $error-color: #f04124;
 footer.modal-footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .alert-container.unread {
